# matrix_client-server

./: CMakeLists.txt  README.md
include/: common.h  matrix.h
src/: client.c  matrix.c  server.c
